<resources>
    <string name="app_name">ShareBookApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="booksTitle">Книги</string>
    <string name="favoriteTitle">Избранное</string>
    <string name="profile">Профиль</string>

    <string name="internal_storage">Internal storage</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Почта</string>
    <string name="user_name">Имя</string>
    <string name="password">Пароль</string>
    <string name="phone_number">Телефон</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in_link">Есть аккаунт? Войдите</string>
    <string name="enter">Вход</string>
    <string name="sign_up_link">Зарегистрироваться</string>
    <string name="name">Название</string>
    <string name="book_author">Автор книги</string>
    <string name="choose_category">Выбор категории</string>
    <string name="choose_city">Выбор города</string>
    <string name="description">Описание</string>
    <string name="add_image">Добавить изображение</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="add">Добавить</string>
    <string name="done">Сделано</string>

    <string name="no_connection">No Ethernet Connection</string>
    <string name="error_in_connection">Error</string>
</resources>