<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.NewPublicationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/newPublicationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/nameOfPublication"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            style="@style/LoginEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newPublicationTitle"/>

        <TextView
            android:id="@+id/publicationAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameOfPublication"/>

        <EditText
            android:id="@+id/authorOfPublication"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            style="@style/LoginEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/publicationAuthor"/>


        <TextView
            android:id="@+id/publicationCategoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_category"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorOfPublication"/>

        <Spinner
            android:id="@+id/categoryList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_background"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/publicationCategoryTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/publicationCityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_city"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryList"/>

        <Spinner
            android:id="@+id/cityList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintTop_toBottomOf="@id/publicationCityTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/newPublicationDescriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityList"/>

        <EditText
            android:id="@+id/descriptionPublication"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="top"
            android:padding="5dp"
            android:background="@drawable/search_background"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newPublicationDescriptionTitle"/>


        <TextView
            android:id="@+id/addImageButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/add_image"
            android:background="@drawable/login_button_background"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:paddingStart="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionPublication"
            app:drawableStartCompat="@drawable/ic_photo_camera" />

        <TextView
            android:id="@+id/chosenImageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_500"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addImageButton"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/publishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_check"
            app:backgroundTint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addImageButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>